[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Deck.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PlayerHand.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Table.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Resources/RoundedBox.tres" type="TileSet" id=5]
[ext_resource path="res://Graphics/Cards/Card_Back1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/EnemyHand.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" parent="." instance=ExtResource( 10 )]

[node name="CardController" type="Node" parent="."]

[node name="Card_Back3" type="Sprite" parent="CardController"]
position = Vector2( 256, 200.471 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Card_Back4" type="Sprite" parent="CardController"]
position = Vector2( 312, 200.471 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Card_Back6" type="Sprite" parent="CardController"]
position = Vector2( 456, 232 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Card_Back7" type="Sprite" parent="CardController"]
position = Vector2( 456, 168 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Card_Back5" type="Sprite" parent="CardController"]
position = Vector2( 368, 200 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Card_Back8" type="Sprite" parent="CardController"]
position = Vector2( 144, 200 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Card_Back2" type="Sprite" parent="CardController"]
position = Vector2( 200, 200.471 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false
offset = Vector2( -2, -1 )

[node name="Table" parent="CardController" instance=ExtResource( 3 )]

[node name="Deck" parent="CardController/Table" index="3"]
position = Vector2( 313.683, 76.3494 )

[node name="Deck" parent="CardController" instance=ExtResource( 1 )]

[node name="PlayerHand" parent="CardController" instance=ExtResource( 2 )]

[node name="EnemyHand" parent="CardController" instance=ExtResource( 8 )]
position = Vector2( 0, 24 )

[node name="Enemy" parent="." instance=ExtResource( 7 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 14, 14 )
format = 1
tile_data = PoolIntArray( 720904, 1, 0, 720905, 1, 1, 720906, 1, 1, 720907, 1, 1, 720908, 1, 1, 720909, 1, 1, 720910, 1, 1, 720911, 1, 1, 720912, 1, 1, 720913, 1, 1, 720914, 1, 1, 720915, 1, 1, 720916, 1, 1, 720917, 1, 1, 720918, 1, 1, 720919, 1, 1, 720920, 1, 1, 720921, 1, 1, 720922, 1, 1, 720923, 1, 1, 720924, 1, 1, 720925, 1, 1, 720926, 1, 1, 720927, 1, 1, 720928, 1, 1, 720929, 1, 1, 720930, 1, 1, 720931, 1, 1, 720932, 1, 2, 786440, 1, 65536, 786441, 1, 65539, 786442, 1, 65539, 786443, 1, 65539, 786444, 1, 65539, 786445, 1, 65539, 786446, 1, 65539, 786447, 1, 32, 786448, 1, 65539, 786449, 1, 32, 786450, 1, 65539, 786451, 1, 65539, 786452, 1, 65539, 786453, 1, 32, 786454, 1, 32, 786455, 1, 32, 786456, 1, 65539, 786457, 1, 32, 786458, 1, 65539, 786459, 1, 65539, 786460, 1, 32, 786461, 1, 65539, 786462, 1, 32, 786463, 1, 65539, 786464, 1, 32, 786465, 1, 32, 786466, 1, 65539, 786467, 1, 65539, 786468, 1, 65538, 851976, 1, 65536, 851977, 1, 32, 851978, 1, 32, 851979, 1, 65539, 851980, 1, 65539, 851981, 1, 65539, 851982, 1, 65539, 851983, 1, 32, 851984, 1, 65539, 851985, 1, 32, 851986, 1, 32, 851987, 1, 65539, 851988, 1, 65539, 851989, 1, 65539, 851990, 1, 65539, 851991, 1, 65539, 851992, 1, 65539, 851993, 1, 32, 851994, 1, 32, 851995, 1, 32, 851996, 1, 65539, 851997, 1, 65539, 851998, 1, 65539, 851999, 1, 32, 852000, 1, 32, 852001, 1, 32, 852002, 1, 32, 852003, 1, 32, 852004, 1, 65538, 917512, 1, 65536, 917513, 1, 32, 917514, 1, 65539, 917515, 1, 32, 917516, 1, 65539, 917517, 1, 65539, 917518, 1, 32, 917519, 1, 65539, 917520, 1, 32, 917521, 1, 65539, 917522, 1, 32, 917523, 1, 65539, 917524, 1, 65539, 917525, 1, 32, 917526, 1, 32, 917527, 1, 65539, 917528, 1, 32, 917529, 1, 65539, 917530, 1, 32, 917531, 1, 32, 917532, 1, 32, 917533, 1, 65539, 917534, 1, 32, 917535, 1, 65539, 917536, 1, 32, 917537, 1, 32, 917538, 1, 32, 917539, 1, 32, 917540, 1, 65538, 983048, 1, 65536, 983049, 1, 65539, 983050, 1, 65539, 983051, 1, 32, 983052, 1, 32, 983053, 1, 65539, 983054, 1, 65539, 983055, 1, 32, 983056, 1, 32, 983057, 1, 32, 983058, 1, 32, 983059, 1, 32, 983060, 1, 65539, 983061, 1, 32, 983062, 1, 32, 983063, 1, 65539, 983064, 1, 32, 983065, 1, 65539, 983066, 1, 32, 983067, 1, 65539, 983068, 1, 65539, 983069, 1, 65539, 983070, 1, 65539, 983071, 1, 65539, 983072, 1, 32, 983073, 1, 65539, 983074, 1, 32, 983075, 1, 65539, 983076, 1, 65538, 1048584, 1, 65536, 1048585, 1, 65539, 1048586, 1, 32, 1048587, 1, 32, 1048588, 1, 32, 1048589, 1, 65539, 1048590, 1, 32, 1048591, 1, 65539, 1048592, 1, 32, 1048593, 1, 65539, 1048594, 1, 32, 1048595, 1, 65539, 1048596, 1, 65539, 1048597, 1, 65539, 1048598, 1, 32, 1048599, 1, 65539, 1048600, 1, 32, 1048601, 1, 32, 1048602, 1, 32, 1048603, 1, 65539, 1048604, 1, 65539, 1048605, 1, 65539, 1048606, 1, 32, 1048607, 1, 32, 1048608, 1, 65539, 1048609, 1, 65539, 1048610, 1, 32, 1048611, 1, 65539, 1048612, 1, 65538, 1114120, 1, 65536, 1114121, 1, 65539, 1114122, 1, 65539, 1114123, 1, 32, 1114124, 1, 32, 1114125, 1, 65539, 1114126, 1, 32, 1114127, 1, 65539, 1114128, 1, 32, 1114129, 1, 65539, 1114130, 1, 32, 1114131, 1, 32, 1114132, 1, 32, 1114133, 1, 65539, 1114134, 1, 65539, 1114135, 1, 65539, 1114136, 1, 32, 1114137, 1, 65539, 1114138, 1, 65539, 1114139, 1, 65539, 1114140, 1, 65539, 1114141, 1, 65539, 1114142, 1, 32, 1114143, 1, 32, 1114144, 1, 32, 1114145, 1, 32, 1114146, 1, 32, 1114147, 1, 32, 1114148, 1, 65538, 1179656, 1, 65536, 1179657, 1, 32, 1179658, 1, 65539, 1179659, 1, 32, 1179660, 1, 32, 1179661, 1, 32, 1179662, 1, 32, 1179663, 1, 32, 1179664, 1, 32, 1179665, 1, 32, 1179666, 1, 65539, 1179667, 1, 32, 1179668, 1, 32, 1179669, 1, 65539, 1179670, 1, 65539, 1179671, 1, 32, 1179672, 1, 65539, 1179673, 1, 32, 1179674, 1, 65539, 1179675, 1, 32, 1179676, 1, 32, 1179677, 1, 32, 1179678, 1, 65539, 1179679, 1, 32, 1179680, 1, 65539, 1179681, 1, 32, 1179682, 1, 65539, 1179683, 1, 65539, 1179684, 1, 65538, 1245192, 1, 65536, 1245193, 1, 65539, 1245194, 1, 32, 1245195, 1, 65539, 1245196, 1, 65539, 1245197, 1, 65539, 1245198, 1, 32, 1245199, 1, 32, 1245200, 1, 65539, 1245201, 1, 32, 1245202, 1, 65539, 1245203, 1, 65539, 1245204, 1, 32, 1245205, 1, 32, 1245206, 1, 32, 1245207, 1, 32, 1245208, 1, 65539, 1245209, 1, 32, 1245210, 1, 32, 1245211, 1, 32, 1245212, 1, 65539, 1245213, 1, 32, 1245214, 1, 32, 1245215, 1, 32, 1245216, 1, 32, 1245217, 1, 65539, 1245218, 1, 65539, 1245219, 1, 32, 1245220, 1, 65538, 1310728, 1, 65536, 1310729, 1, 32, 1310730, 1, 32, 1310731, 1, 32, 1310732, 1, 65539, 1310733, 1, 32, 1310734, 1, 32, 1310735, 1, 65539, 1310736, 1, 65539, 1310737, 1, 65539, 1310738, 1, 65539, 1310739, 1, 32, 1310740, 1, 32, 1310741, 1, 65539, 1310742, 1, 32, 1310743, 1, 32, 1310744, 1, 32, 1310745, 1, 32, 1310746, 1, 65539, 1310747, 1, 65539, 1310748, 1, 32, 1310749, 1, 65539, 1310750, 1, 65539, 1310751, 1, 32, 1310752, 1, 32, 1310753, 1, 32, 1310754, 1, 32, 1310755, 1, 65539, 1310756, 1, 65538, 1376264, 1, 131072, 1376265, 1, 131073, 1376266, 1, 131073, 1376267, 1, 131073, 1376268, 1, 131073, 1376269, 1, 131073, 1376270, 1, 131073, 1376271, 1, 131073, 1376272, 1, 131073, 1376273, 1, 131073, 1376274, 1, 131073, 1376275, 1, 131073, 1376276, 1, 131073, 1376277, 1, 131073, 1376278, 1, 131073, 1376279, 1, 131073, 1376280, 1, 131073, 1376281, 1, 131073, 1376282, 1, 131073, 1376283, 1, 131073, 1376284, 1, 131073, 1376285, 1, 131073, 1376286, 1, 131073, 1376287, 1, 131073, 1376288, 1, 131073, 1376289, 1, 131073, 1376290, 1, 131073, 1376291, 1, 131073, 1376292, 1, 131074 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="TileMap"]
position = Vector2( 84.5101, 134.123 )
frames = SubResource( 1 )
animation = "New Anim"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.958
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="UI"]

[editable path="CardController/Table"]
